--- a/about.css
+++ b/about.css
@@ -110,3 +110,105 @@ body.preloader-site {
   width: 90px;
   height: 87px;
 }
+.title{
+  font-size: 130px;
+  text-align: center;
+  margin-top: 150px;
+  font-family: 'Poppins', sans-serif;
+}
+.quest{
+  font-size: 100px;
+  text-align: left;
+    padding-top: 30px;
+  margin-left: 50px;
+  font-family: 'Poppins', sans-serif;
+}
+.questTwo{
+  font-size: 100px;
+  padding-top: 30px;
+  text-align: right;
+  margin-right: 50px;
+  font-family: 'Poppins', sans-serif;
+}
+.answer{
+  font-size: 40px;
+  margin-left: 20px;
+  text-align: left;
+  font-family: 'Lexend Exa', sans-serif;
+}
+.phoebe{
+  width: 380px;
+  height: 380px;
+  object-fit: cover;
+  border-radius: 50%;
+  margin: 0;
+  border: 10px solid #ffc87e;
+}
+.processPic{
+  width: 650px;
+  height: 520px;
+  margin-bottom: 0px;
+}
+.flexRow{
+  display: flex;
+  flex-direction: row;
+  margin-top: 50px;
+}
+.name{
+  text-align: center;
+  font-size: 90px;
+  font-family: 'Poppins', sans-serif;
+  padding-top: 30px;
+  margin-bottom: 15px;
+}
+.nameSub{
+  text-align: center;
+  font-size: 40px;
+  margin-top: 30px;
+  margin-left: 30px;
+  margin-right: 30px;
+  font-family: 'Lexend Exa', sans-serif;
+}
+.flexCol{
+  display: flex;
+  flex-direction: column;
+}
+.flexColT{
+  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.curioPic{
+  width: 380px;
+  height: 300px;
+  margin-right: 30px;
+}
+.thirdTextSubPro{
+  font-size: 40px;
+  margin-left: 50px;
+  margin-top: 2px;
+  font-family: 'Lexend Exa', sans-serif;
+}
+.thirdTextSubPro:hover{
+  color: #ffc87e;
+  cursor:pointer;
+  transform: scale(1.2);
+}
+a:link{
+  color: black;
+  text-decoration: none;
+}
+a:visited{
+  color: black;
+  text-decoration: none;
+}
+.readPic{
+  width: 230px;
+  height: 320px;
+  margin-left: 80px;
+  margin-top: -30px;
+}
+#one, #two, #three, #four{
+  width: 100%;
+  height: 100vh;
+}
