--- a/projects.css
+++ b/projects.css
@@ -147,6 +147,12 @@ body.preloader-site {
   flex-direction: row;
   margin-top: 50px;
 }
+.flexRowTwo{
+  display: flex;
+  flex-direction: row;
+  margin-top: 50px;
+  justify-content: space-around;
+}
 .tableCon{
   font-size: 60px;
   font-family: 'Poppins', sans-serif;
@@ -164,6 +170,22 @@ margin-right: 80px;
   margin-right: 80px;
   font-family: 'Lexend Exa', sans-serif;
 }
+.flexColTwo{
+  display: flex;
+  flex-direction: column;
+}
+.flexColThr{
+  display: flex;
+  flex-direction: column;
+  width: 440px;
+}
+.proDes{
+  font-size: 30px;
+  font-family: 'Poppins', sans-serif;
+text-align: center;
+margin-left: 130px;
+margin-right: 130px;
+}
 .tableSub{
     font-size: 50px;
     margin-bottom: 25px;
@@ -180,6 +202,29 @@ a:link{
 a:visited{
   text-decoration: none;
   color: #FAFAF3;
+}
+.proText{
+  font-size: 80px;
+  padding-top: 20px;
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+}
+.proImg{
+  width: 450px;
+  margin-left: 40px;
+  height: 450px;
+  margin-top: -40px;
+}
+.proSub{
+  font-size: 22px;
+  text-align: center;
+  font-family: 'Lexend Exa', sans-serif;
+}
+.proTitle{
+  font-size: 40px;
+  text-align: center;
+  font-family: 'Lexend Exa', sans-serif;
+
 }
 #one, #two{
   width: 100%;
