--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 .profile{
   width: 150px;
   height: 150px;
@@ -17,6 +16,7 @@ h1{
   justify-content: center;
   align-items: center;
   margin: 10%;
+  margin-bottom: 0px;
 }
 body{
   background-color: #29C7D7;
@@ -39,4 +39,10 @@ body{
 }
 input:focus{
   outline: 0;
+}
+.arrow{
+  width: 300px;
+  height: 200px;
+  margin: 0;
+  margin-left: 3px;
 }
