--- a/home.css
+++ b/home.css
@@ -327,18 +327,27 @@ margin-left: 50px;
 .IG{
   width: 18px;
   height: 18px;
-  position: absolute;
+  /* position: absolute;
   margin-top: -10px;
-  right: 130px;
+  right: 130px; */
   cursor:pointer;
 }
 .mailIcon{
   width: 20px;
-  height: 15px;
-  padding: 0.2px;
-  position: absolute;
-  right: 103px;
+  height: 19px;
+  margin-left: 10px;
+  /* margin-bottom: 20px; */
+  /* padding: 0.2px; */
+  /* position: absolute;
+  right: 103px; */
   cursor:pointer;
+}
+.lilmenu{
+  display: flex;
+  flex-direction: row;
+  position: absolute;
+  right: 105px;
+  margin-top: 3px;
 }
 #clock{
   position: absolute;
