--- a/home.css
+++ b/home.css
@@ -477,7 +477,7 @@ margin-left: 50px;
 transform: scale(1.2);
 }
 
-.justCodeBut:hover, .redesignBut:hover, .techButTwo:hover, .techBut:hover, .techButShe:hover, .techButSheTwo:hover, .pseudoBut:hover, .pseudoButTwo:hover{
+.justCodeBut:hover, .redesignBut:hover, .techButTwo:hover, .techBut:hover, .techButShe:hover, .techButSheTwo:hover, .pseudoBut:hover, .pseudoButTwo:hover, .jumButThree:hover, .jumButTwo:hover, .jumButOne:hover, .techButAZN:hover{
     /* background-color: #ffc87e; */
       border: 2px solid #ffc87e;
       color: #ffc87e;
@@ -660,6 +660,51 @@ transform: scale(1.2);
   background-color: transparent;
 
 }
+.jumButOne{
+  position: absolute;
+  top: 105%;
+  right: 20%;
+  width: 90px;
+  height: 40px;
+  text-align: center;
+  font-size: 12px;
+  border-radius: 50%;
+  font-family: 'Poppins', sans-serif;
+  border: 2px solid black;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  background-color: transparent;
+}
+.jumButTwo{
+  position: absolute;
+  top: 120%;
+  right: 20%;
+  width: 90px;
+  height: 40px;
+  text-align: center;
+  font-size: 12px;
+  border-radius: 50%;
+  font-family: 'Poppins', sans-serif;
+  border: 2px solid black;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  background-color: transparent;
+}
+.jumButThree{
+  position: absolute;
+  top: 135%;
+  right: 20%;
+  width: 90px;
+  height: 40px;
+  text-align: center;
+  font-size: 12px;
+  border-radius: 50%;
+  font-family: 'Poppins', sans-serif;
+  border: 2px solid black;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  background-color: transparent;
+}
 .azn{
   width: 65px;
   height: 65px;
@@ -792,7 +837,7 @@ transform: scale(1.2);
   font-family: 'Lexend Exa', sans-serif;
   position: absolute;
   top: 105%;
-  right: 75px;
+  right: 80px;
   font-size: 20px;
   text-align: center;
 }
@@ -809,6 +854,14 @@ transform: scale(1.2);
   position: absolute;
   top: 105%;
   right: 75px;
+  font-size: 20px;
+  text-align: center;
+}
+.proTextThreePlan{
+  font-family: 'Lexend Exa', sans-serif;
+  position: absolute;
+  top: 105%;
+  right: 80px;
   font-size: 20px;
   text-align: center;
 }
